修改del request
